ito-rs/crates/ito-cli/tests/snapshots/cli_snapshots__ito_agent_instruction_help.snap
---
source: ito-rs/crates/ito-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"agent\", \"instruction\", \"-h\"])"
---
Generate enriched instructions

Usage: ito agent instruction [OPTIONS] <ARTIFACT>

Arguments:
  <ARTIFACT>  Artifact id (e.g. bootstrap, apply, proposal)

Options:
  -c, --change <CHANGE>        Change id (directory name)
      --no-color               Disable color output
      --help-all               Print the full CLI reference (equivalent to `ito help --all`)
      --tool <TOOL>            Tool name for bootstrap (opencode|claude|codex|github-copilot|pi)
      --schema <SCHEMA>        Workflow schema name
      --json                   Output as JSON
      --variant <VARIANT>      Manifesto output variant (light|full)
      --profile <PROFILE>      Manifesto capability profile (planning|proposal-only|review-only|apply|archive|full)
      --operation <OPERATION>  Manifesto operation selector for full renders
      --sync                   Sync coordination branch before generating instructions (opt-in for apply)
      --context <CONTEXT>      Free-form context for `memory-capture`
      --file <FILE>            File path for `memory-capture` (repeatable)
      --folder <FOLDER>        Folder path for `memory-capture` (repeatable)
      --query <QUERY>          Search/query input for `memory-search` and `memory-query`
      --limit <LIMIT>          Limit for `memory-search` (positive integer)
      --scope <SCOPE>          Scope for `memory-search`
  -h, --help                   Print help

Artifacts:
  bootstrap                          Generate a tool bootstrap preamble
  project-setup                      Guide for setting up a new project
  backend                            Backend server and client configuration guide
  worktrees                          Guide for git worktree workflow (config-driven)
  repo-sweep                         Scan for old-only ID format assumptions in prompts and templates
  migrate-to-coordination-worktree   Guide for migrating from embedded to worktree storage
  orchestrate                        Orchestrate applying a set of changes via an orchestrator agent
  manifesto                          Generate a strict Ito manifesto for prompt-only execution
  proposal                           Show the change proposal
  specs                              Show the specification deltas
  tasks                              Show the implementation task list
  apply                              Show implementation instructions
  review                             Show review instructions
  archive                            Show archive instructions
  finish                             Cleanup worktrees and branches after merge
  memory-capture                     Capture durable knowledge through configured memory
  memory-search                      Search configured memory for ranked matches
  memory-query                       Query configured memory for a synthesized answer

Examples:
  ito agent instruction bootstrap --tool opencode
  ito agent instruction project-setup
  ito agent instruction backend
  ito agent instruction worktrees
  ito agent instruction repo-sweep
  ito agent instruction migrate-to-coordination-worktree
  ito agent instruction orchestrate
  ito agent instruction manifesto
  ito agent instruction manifesto --variant full --profile proposal-only
  ito agent instruction manifesto --change 005-08_migrate-cli-to-clap --variant full --operation apply
  ito agent instruction proposal --change 005-08_migrate-cli-to-clap
  ito agent instruction apply --change 005-08_migrate-cli-to-clap
  ito agent instruction apply --change 005-08_migrate-cli-to-clap --sync
  ito agent instruction archive
  ito agent instruction archive --change 005-08_migrate-cli-to-clap
  ito agent instruction finish --change 005-08_migrate-cli-to-clap
  ito agent instruction memory-capture --context "Decision and rationale" --file docs/config.md
  ito agent instruction memory-search --query "archive workflow" --limit 5
  ito agent instruction memory-query --query "How should agents capture memories?"
