ito-rs/crates/ito-cli/tests/snapshots/cli_snapshots__ito_create_help.snap
---
source: ito-rs/crates/ito-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"create\", \"--help\"])"
---
Create a new module or change proposal

Modules group related changes and specs. Changes are the unit of work
in Ito - each change has a proposal, spec deltas, and implementation tasks.

Examples:
  ito create module my-feature
  ito create change add-auth --module 001

Usage: ito create [OPTIONS] [COMMAND]

Commands:
  module      Create a module [aliases: mo]
  change      Create a change [aliases: ch]
  sub-module  Create a sub-module under an existing module [aliases: sm]

Options:
      --no-color
          Disable color output

      --help-all
          Print the full CLI reference (equivalent to `ito help --all`)

  -h, --help
          Print help (see a summary with '-h')
