ito-rs/crates/ito-cli/tests/snapshots/cli_snapshots__ito_domain_help.snap
---
source: ito-rs/crates/ito-cli/tests/cli_snapshots.rs
assertion_line: 124
expression: "snapshot(&[\"workflow\", \"--help\"])"
---
Legacy workflow command namespace (no-op)

`ito workflow` and its subcommands are retained as compatibility no-ops.
Use `ito agent instruction <artifact>` and `ito tasks ...` for active workflows.

Examples:
  ito workflow
  ito agent instruction apply --change 005-01_add-auth
  ito tasks status 005-01_add-auth

Usage: ito workflow [OPTIONS] [COMMAND]

Commands:
  init    Legacy no-op
  list    Legacy no-op
  show    Legacy no-op
  run     Legacy no-op
  status  Legacy no-op

Options:
      --no-color
          Disable color output

      --help-all
          Print the full CLI reference (equivalent to `ito help --all`)

  -h, --help
          Print help (see a summary with '-h')
