ito-rs/crates/ito-cli/tests/snapshots/cli_snapshots__ito_help.snap
---
source: ito-rs/crates/ito-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"--help\"])"
---
AI-native system for spec-driven development

Usage: ito [OPTIONS] [COMMAND]

Commands:
  change        Inspect readiness for an Ito change
  create        Create a new module or change proposal [aliases: cr]
  list          List changes, specs, or modules with status summaries [aliases: ls]
  list-archive  List archived changes (use --json for machine-readable output) [aliases: la]
  show          Display details of a change, spec, or module [aliases: sh]
  status        Check completion status of change artifacts [aliases: st]
  validate      Check changes, specs, and modules for errors and warnings [aliases: va]
  archive       Move a completed change to archive and update main specs [aliases: ar]
  patch         Apply a targeted patch to an active change artifact
  write         Replace an active change artifact completely
  sync          Validate and synchronize coordination worktree state
  grep          Search Ito change artifacts using a regular expression [aliases: gr]
  tasks         Manage implementation tasks for a change [aliases: ts]
  plan          Initialize and inspect the planning workspace [aliases: pl]
  agent         Generate instructions and context for AI coding agents [aliases: ag]
  ralph         Run an AI agent loop to implement a change [aliases: ra]
  init          Set up Ito in a project [aliases: in]
  update        Refresh Ito instruction files and AI tool configs [aliases: up]
  config        Read and write global Ito settings [aliases: co]
  path          Print resolved project and worktree paths
  worktree      Manage change worktrees (ensure, setup)
  view          View proposal artifacts with an interactive or explicit viewer
  serve         Serve local Ito artifacts and docs over HTTP [aliases: se]
  backend       Manage backend client configuration and connectivity [aliases: be]
  audit         Query, validate, and manage the audit event log [aliases: au]
  util          Low-level utility commands for scripting and agent tooling. [aliases: u]
  trace         Show requirement traceability for a change [aliases: tr]
  completions   Output shell completion scripts [aliases: cp]
  stats         Display command execution counts and history [aliases: ss]
  help          Show help for ito commands [aliases: he]

Options:
      --no-color  Disable color output
      --help-all  Print the full CLI reference (equivalent to `ito help --all`)
  -h, --help      Print help
  -V, --version   Print version

Run 'ito help --all' for the complete CLI reference.
